# UTT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  log.txt  main.cpp
Shaders/: CMakeLists.txt  triangle.frag  triangle.vert
